--- a/markups-eventoz/style.css
+++ b/markups-eventoz/style.css
@@ -260,7 +260,7 @@ p {
 	display: inline-block;
 	font-weight: 900;
 	background: ;
-	padding: 5px 20px;
+	padding: 0px;
 	margin-bottom: 30px;
 }
 
