--- a/markups-eventoz/markups-eventoz/style.css
+++ b/markups-eventoz/markups-eventoz/style.css
@@ -73,7 +73,7 @@ h4,
 h5,
 h6 {
 	font-family: 'Quicksand', sans-serif;
-	font-weight: 900;
+	font-weight: 700;
 	margin-top: 0;
 	
 }
@@ -243,7 +243,7 @@ p {
 .mu-hero-overlay {
 	display: inline;
 	float: left;
-	opacity: 0.94;
+	opacity: .94;
 	width: 100%;
 }
 
@@ -252,16 +252,18 @@ p {
 	float: left;
 	text-align: center;
 	width: 100%;
+	opacity: 1;
 }
 
 .mu-logo {
 	font-size: 35px;
 	font-family: 'Quicksand', sans-serif;
 	display: inline-block;
-	font-weight: 900;
+	font-weight: 700;
 	background: ;
 	padding: 0px;
 	margin-bottom: 30px;
+	opacity: 1;
 }
 
 
@@ -440,6 +442,13 @@ p {
 	display: inline;
 	float: left;
 	width: 100%;
+	text-align: left;
+}
+
+.mu-about-center {
+	display: inline;
+	float: center;
+	width: 100%;
 }
 
 .mu-about-right {
@@ -447,6 +456,7 @@ p {
 	float: left;
 	margin-top: 30px;
 	width: 100%;
+	text-align: left;
 }
 
 
@@ -750,7 +760,7 @@ p {
 .mu-single-speakers {
 	padding: 0 10px;
 	outline: none;
-	text-align: center;
+	text-align: left;
 	-webkit-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
@@ -804,6 +814,7 @@ p {
 	display: inline;
 	float: left;
 	width: 100%;
+	text-align: left;
 }
 
 .mu-venue-area {
@@ -982,8 +993,30 @@ p {
 	width: 100%;
 }
 
+#mu-register2 {
+	background-image: url("assets/images/registerbg2.jpg");
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+	display: inline;
+	float: left;
+	position: relative;
+	width: 100%;
+}
+
 #mu-register::before {
-	background: rgba(0,0,0,0.9);
+	background: rgba(41,37,96,0.9);
+	bottom: 0;
+	content: '';
+	left: 0;
+	top: 0;
+	right: 0;
+	position: absolute;
+	opacity: 0.9;
+}
+
+#mu-register2::before {
+	background: rgba(41,37,96,0.9);
 	bottom: 0;
 	content: '';
 	left: 0;
@@ -1516,6 +1549,7 @@ p {
 
 	.mu-logo img {
 		width: 150px;
+		opacity: 1;
 	}
 
 	
@@ -1587,6 +1621,7 @@ p {
 	.mu-logo {
 		margin-bottom: 10px;
 		font-size: 30px;
+		opacity: 1;
 	}
 
 	.mu-hero-featured-area {
@@ -1717,6 +1752,7 @@ p {
 
 	.mu-logo img {
 		width: 120px;
+		
 	}
 
 	.mu-hero-featured-area {
